Fixed pkg-config file.
git-svn-id: https://cygwin-ports.svn.sourceforge.net/svnroot/cygwin-ports/ports/trunk@1887 e127d73d-b18e-4ae1-a744-a22e6a3ccd30

--- a/README
+++ b/README
@@ -74,6 +74,9 @@ Files included in the development package:
 
 Port Notes:
 
+----- version 1.2.18-2 -----
+Fixed pkg-config file.
+
 ----- version 1.2.18-1 -----
 Version bump; last release was 1.2.12-1 by Charles Wilson.
 Includes upstream patch for gray handling (Gentoo bug #181318).
