--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Build requirements:
 (besides corresponding -devel packages)
   cygwin-1.5.24-2
   binutils-20060817-1
-  cygport-0.3.5-1
+  cygport-0.3.7-1
   gawk-3.1.5-4
   gcc-core-3.4.4-3
   make-3.81-1
@@ -28,32 +28,32 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack libpng12-1.2.22-X-src.tar.bz2
+  unpack libpng12-1.2.23-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./libpng12-1.2.22-X.cygport all
+  cygport ./libpng12-1.2.23-X.cygport all
 
 This will create:
-  /usr/src/libpng12-1.2.22-X-src.tar.bz2
-  /usr/src/libpng12-1.2.22-X.tar.bz2
-  /usr/src/libpng12-devel-1.2.22-X.tar.bz2
+  /usr/src/libpng12-1.2.23-X-src.tar.bz2
+  /usr/src/libpng12-1.2.23-X.tar.bz2
+  /usr/src/libpng12-devel-1.2.23-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the main package:
 
   /usr/bin/cygpng12.dll
-  /usr/share/doc/Cygwin/libpng12-1.2.22.README
-  /usr/share/doc/libpng12-1.2.22/ANNOUNCE
-  /usr/share/doc/libpng12-1.2.22/Changes
-  /usr/share/doc/libpng12-1.2.22/INSTALL
-  /usr/share/doc/libpng12-1.2.22/KNOWNBUG
-  /usr/share/doc/libpng12-1.2.22/LICENSE
-  /usr/share/doc/libpng12-1.2.22/README
-  /usr/share/doc/libpng12-1.2.22/TODO
-  /usr/share/doc/libpng12-1.2.22/example.c
-  /usr/share/doc/libpng12-1.2.22/libpng-1.2.22.txt
+  /usr/share/doc/Cygwin/libpng12-1.2.23.README
+  /usr/share/doc/libpng12-1.2.23/ANNOUNCE
+  /usr/share/doc/libpng12-1.2.23/Changes
+  /usr/share/doc/libpng12-1.2.23/INSTALL
+  /usr/share/doc/libpng12-1.2.23/KNOWNBUG
+  /usr/share/doc/libpng12-1.2.23/LICENSE
+  /usr/share/doc/libpng12-1.2.23/README
+  /usr/share/doc/libpng12-1.2.23/TODO
+  /usr/share/doc/libpng12-1.2.23/example.c
+  /usr/share/doc/libpng12-1.2.23/libpng-1.2.23.txt
 
 Files included in the development package:
 
@@ -73,6 +73,9 @@ Files included in the development package:
 ------------------
 
 Port Notes:
+
+----- version 1.2.23-1 -----
+Version bump.
 
 ----- version 1.2.22-1 -----
 Version bump.
