--- a/README
+++ b/README
@@ -27,31 +27,31 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack libpng12-1.2.27-X-src.tar.bz2
+  unpack libpng12-1.2.29-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./libpng12-1.2.27-X.cygport all
+  cygport ./libpng12-1.2.29-X.cygport all
 
 This will create:
-  /usr/src/libpng12-1.2.27-X-src.tar.bz2
-  /usr/src/libpng12-1.2.27-X.tar.bz2
-  /usr/src/libpng12-devel-1.2.27-X.tar.bz2
+  /usr/src/libpng12-1.2.29-X-src.tar.bz2
+  /usr/src/libpng12-1.2.29-X.tar.bz2
+  /usr/src/libpng12-devel-1.2.29-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the main package:
 
   /usr/bin/cygpng12.dll
-  /usr/share/doc/libpng12-1.2.27/ANNOUNCE
-  /usr/share/doc/libpng12-1.2.27/Changes
-  /usr/share/doc/libpng12-1.2.27/INSTALL
-  /usr/share/doc/libpng12-1.2.27/KNOWNBUG
-  /usr/share/doc/libpng12-1.2.27/LICENSE
-  /usr/share/doc/libpng12-1.2.27/README
-  /usr/share/doc/libpng12-1.2.27/TODO
-  /usr/share/doc/libpng12-1.2.27/example.c
-  /usr/share/doc/libpng12-1.2.27/libpng-1.2.27.txt
+  /usr/share/doc/libpng12-1.2.29/ANNOUNCE
+  /usr/share/doc/libpng12-1.2.29/Changes
+  /usr/share/doc/libpng12-1.2.29/INSTALL
+  /usr/share/doc/libpng12-1.2.29/KNOWNBUG
+  /usr/share/doc/libpng12-1.2.29/LICENSE
+  /usr/share/doc/libpng12-1.2.29/README
+  /usr/share/doc/libpng12-1.2.29/TODO
+  /usr/share/doc/libpng12-1.2.29/example.c
+  /usr/share/doc/libpng12-1.2.29/libpng-1.2.29.txt
 
 Files included in the development package:
 
@@ -71,6 +71,9 @@ Files included in the development package:
 ------------------
 
 Port Notes:
+
+----- version 1.2.29-1 -----
+Version bump.
 
 ----- version 1.2.27-1 -----
 Version bump.
