--- a/README
+++ b/README
@@ -5,13 +5,13 @@ format. PNG, or Portable Network Graphics, is a
 turbo-studly image format with lossless compression.
 
 Runtime requirements:
-  cygwin-1.5.25-11
+  cygwin-1.5.25-15
   zlib-1.2.3-2
 
 Build requirements:
 (besides corresponding -devel packages)
-  binutils-20060817-1
-  cygport-0.3.10-1
+  binutils-20080524-2
+  cygport-0.3.12-1
   gawk-3.1.6-1
   gcc-core-3.4.4-3
   make-3.81-1
@@ -27,50 +27,57 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack libpng12-1.2.29-X-src.tar.bz2
+  unpack libpng12-1.2.30-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./libpng12-1.2.29-X.cygport all
+  cygport ./libpng12-1.2.30-X.cygport all
 
 This will create:
-  /usr/src/libpng12-1.2.29-X-src.tar.bz2
-  /usr/src/libpng12-1.2.29-X.tar.bz2
-  /usr/src/libpng12-devel-1.2.29-X.tar.bz2
+  /usr/src/libpng12-1.2.30-X-src.tar.bz2
+  /usr/src/libpng12-1.2.30-X.tar.bz2
+  /usr/src/libpng12-devel-1.2.30-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the main package:
 
   /usr/bin/cygpng12.dll
-  /usr/share/doc/libpng12-1.2.29/ANNOUNCE
-  /usr/share/doc/libpng12-1.2.29/Changes
-  /usr/share/doc/libpng12-1.2.29/INSTALL
-  /usr/share/doc/libpng12-1.2.29/KNOWNBUG
-  /usr/share/doc/libpng12-1.2.29/LICENSE
-  /usr/share/doc/libpng12-1.2.29/README
-  /usr/share/doc/libpng12-1.2.29/TODO
-  /usr/share/doc/libpng12-1.2.29/example.c
-  /usr/share/doc/libpng12-1.2.29/libpng-1.2.29.txt
+  /usr/share/doc/libpng12-1.2.30/ANNOUNCE
+  /usr/share/doc/libpng12-1.2.30/Changes
+  /usr/share/doc/libpng12-1.2.30/INSTALL
+  /usr/share/doc/libpng12-1.2.30/KNOWNBUG
+  /usr/share/doc/libpng12-1.2.30/LICENSE
+  /usr/share/doc/libpng12-1.2.30/README
+  /usr/share/doc/libpng12-1.2.30/TODO
+  /usr/share/doc/libpng12-1.2.30/example.c
+  /usr/share/doc/libpng12-1.2.30/libpng-1.2.30.txt
 
-Files included in the development package:
-
-  /etc/postinstall/libpng12-devel.sh
-  /etc/preremove/libpng12-devel.sh
+(libpng12-devel)
+  /usr/bin/libpng-config
   /usr/bin/libpng12-config
+  /usr/include/libpng
   /usr/include/libpng12/png.h
   /usr/include/libpng12/pngconf.h
+  /usr/include/png.h
+  /usr/include/pngconf.h
+  /usr/lib/libpng.a
+  /usr/lib/libpng.dll.a
   /usr/lib/libpng12.a
   /usr/lib/libpng12.dll.a
-  /usr/lib/libpng12.la
+  /usr/lib/pkgconfig/libpng.pc
   /usr/lib/pkgconfig/libpng12.pc
-  /usr/share/man/man3/libpng12.3.gz
-  /usr/share/man/man3/libpng12pf.3.gz
-  /usr/share/man/man5/png12.5.gz
+  /usr/share/man/man3/libpng.3.gz
+  /usr/share/man/man3/libpngpf.3.gz
+  /usr/share/man/man5/png.5.gz
 
 ------------------
 
 Port Notes:
+
+----- version 1.2.30-1 -----
+Version bump.
+Discontinued usage of alternatives.
 
 ----- version 1.2.29-1 -----
 Version bump.
