--- a/README
+++ b/README
@@ -10,8 +10,8 @@ Runtime requirements:
 
 Build requirements:
 (besides corresponding -devel packages)
-  binutils-20080524-2
-  cygport-0.3.13-1
+  binutils-20080624-2
+  cygport-0.4.0-1
   gawk-3.1.6-1
   gcc-core-3.4.4-3
   make-3.81-1
@@ -27,31 +27,31 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack libpng12-1.2.31-X-src.tar.bz2
+  unpack libpng12-1.2.32-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./libpng12-1.2.31-X.cygport all
+  cygport ./libpng12-1.2.32-X.cygport all
 
 This will create:
-  /usr/src/libpng12-1.2.31-X-src.tar.bz2
-  /usr/src/libpng12-1.2.31-X.tar.bz2
-  /usr/src/libpng12-devel-1.2.31-X.tar.bz2
+  /usr/src/libpng12-1.2.32-X-src.tar.bz2
+  /usr/src/libpng12-1.2.32-X.tar.bz2
+  /usr/src/libpng12-devel-1.2.32-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the main package:
 
   /usr/bin/cygpng12.dll
-  /usr/share/doc/libpng12-1.2.31/ANNOUNCE
-  /usr/share/doc/libpng12-1.2.31/Changes
-  /usr/share/doc/libpng12-1.2.31/INSTALL
-  /usr/share/doc/libpng12-1.2.31/KNOWNBUG
-  /usr/share/doc/libpng12-1.2.31/LICENSE
-  /usr/share/doc/libpng12-1.2.31/README
-  /usr/share/doc/libpng12-1.2.31/TODO
-  /usr/share/doc/libpng12-1.2.31/example.c
-  /usr/share/doc/libpng12-1.2.31/libpng-1.2.31.txt
+  /usr/share/doc/libpng12-1.2.32/ANNOUNCE
+  /usr/share/doc/libpng12-1.2.32/Changes
+  /usr/share/doc/libpng12-1.2.32/INSTALL
+  /usr/share/doc/libpng12-1.2.32/KNOWNBUG
+  /usr/share/doc/libpng12-1.2.32/LICENSE
+  /usr/share/doc/libpng12-1.2.32/README
+  /usr/share/doc/libpng12-1.2.32/TODO
+  /usr/share/doc/libpng12-1.2.32/example.c
+  /usr/share/doc/libpng12-1.2.32/libpng-1.2.32.txt
 
 (libpng12-devel)
   /usr/bin/libpng-config
@@ -74,6 +74,9 @@ Files included in the main package:
 ------------------
 
 Port Notes:
+
+----- version 1.2.32-1 -----
+Version bump.
 
 ----- version 1.2.31-1 -----
 Version bump.
