--- a/README
+++ b/README
@@ -11,7 +11,7 @@ Runtime requirements:
 Build requirements:
 (besides corresponding -devel packages)
   binutils-20080624-2
-  cygport-0.4.2-1
+  cygport-0.4.3-1
   gawk-3.1.6-1
   gcc-core-3.4.4-3
   make-3.81-1
@@ -27,31 +27,31 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack libpng12-1.2.33-X-src.tar.bz2
+  unpack libpng12-1.2.34-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./libpng12-1.2.33-X.cygport all
+  cygport ./libpng12-1.2.34-X.cygport all
 
 This will create:
-  /usr/src/libpng12-1.2.33-X-src.tar.bz2
-  /usr/src/libpng12-1.2.33-X.tar.bz2
-  /usr/src/libpng12-devel-1.2.33-X.tar.bz2
+  /usr/src/libpng12-1.2.34-X-src.tar.bz2
+  /usr/src/libpng12-1.2.34-X.tar.bz2
+  /usr/src/libpng12-devel-1.2.34-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the main package:
 
   /usr/bin/cygpng12.dll
-  /usr/share/doc/libpng12-1.2.33/ANNOUNCE
-  /usr/share/doc/libpng12-1.2.33/Changes
-  /usr/share/doc/libpng12-1.2.33/INSTALL
-  /usr/share/doc/libpng12-1.2.33/KNOWNBUG
-  /usr/share/doc/libpng12-1.2.33/LICENSE
-  /usr/share/doc/libpng12-1.2.33/README
-  /usr/share/doc/libpng12-1.2.33/TODO
-  /usr/share/doc/libpng12-1.2.33/example.c
-  /usr/share/doc/libpng12-1.2.33/libpng-1.2.33.txt
+  /usr/share/doc/libpng12-1.2.34/ANNOUNCE
+  /usr/share/doc/libpng12-1.2.34/Changes
+  /usr/share/doc/libpng12-1.2.34/INSTALL
+  /usr/share/doc/libpng12-1.2.34/KNOWNBUG
+  /usr/share/doc/libpng12-1.2.34/LICENSE
+  /usr/share/doc/libpng12-1.2.34/README
+  /usr/share/doc/libpng12-1.2.34/TODO
+  /usr/share/doc/libpng12-1.2.34/example.c
+  /usr/share/doc/libpng12-1.2.34/libpng-1.2.34.txt
 
 (libpng12-devel)
   /usr/bin/libpng-config
@@ -74,6 +74,9 @@ Files included in the main package:
 ------------------
 
 Port Notes:
+
+----- version 1.2.34-1 -----
+Version bump.
 
 ----- version 1.2.33-1 -----
 Version bump.
